# robit

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.cn.md  README.md  publish.ps1  publish.sh
.github/workflows/: release.yml
config/: robit.toml.sample
crates/robit/: Cargo.toml
crates/robit-agent/: Cargo.toml
crates/robit-agent/prompts/: default.md  system.md
crates/robit-agent/src/: agent.rs  bootstrap.rs  context.rs  datetime.rs  error.rs  event.rs  frontend.rs  lib.rs  lock.rs  media.rs  prompt.rs  storage.rs
crates/robit-agent/src/skill/: loader.rs  mod.rs  registry.rs
crates/robit-agent/src/tool/: bash.rs  edit.rs  find.rs  grep.rs  load_skill.rs  ls.rs  memory.rs  mod.rs  read.rs  write.rs
crates/robit-ai/: Cargo.toml
crates/robit-ai/src/: client.rs  config.rs  error.rs  lib.rs  logging.rs
crates/robit-chatbot/: Cargo.toml
crates/robit-chatbot/src/: adapter.rs  confirmer.rs  extensions.rs  frontend.rs  lib.rs  manager.rs  markdown.rs
crates/robit-chatbot/src/tool/: mod.rs  send_file.rs
crates/robit-gui/: .gitignore  Cargo.toml  PROGRESS.md  tauri.conf.json
crates/robit-gui/capabilities/: default.json
crates/robit-gui/icons/: icon.icns
crates/robit-gui/src/: commands.rs  config.rs  db.rs  events.rs  frontend.rs  lib.rs  main.rs  state.rs
crates/robit-gui/tests/: integration.rs
crates/robit-gui/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/robit-gui/ui/src/: App.tsx  main.tsx
crates/robit-gui/ui/src/components/: AssistantMessage.tsx  ChatPanel.tsx  InputArea.tsx  MessageList.tsx  SessionItem.tsx  SessionSidebar.tsx  StatusBar.tsx  ThemeToggle.tsx  ToolCard.tsx  UserMessage.tsx
crates/robit-gui/ui/src/components/ui/: alert-dialog.tsx  scroll-area.tsx  separator.tsx  tooltip.tsx
crates/robit-gui/ui/src/lib/: commands.ts  store.ts  types.ts
crates/robit-gui/ui/src/styles/: globals.css
crates/robit-qq/: Cargo.toml
crates/robit-qq/src/: lib.rs  main.rs  platform.rs  protocol.rs
crates/robit-tui/: Cargo.toml
crates/robit-tui/src/: app.rs  input.rs  main.rs  markdown.rs  tui_frontend.rs  ui.rs
crates/robit/src/: cli.rs  config.rs  main.rs
docs/: architecture.md  llm-config.md  protocol.md  roadmap.md  技术架构文档.md
docs/plans/: config-unification.md  phase2-implementation.md
docs/specs/: 2026-05-28-robit-ai-design.md
docs/superpowers/: GUI_PERFORMANCE_OPTIMIZATION.md
docs/superpowers/plans/: 2026-05-28-robit-ai-phase1.md  2026-06-05-write-edit-tools.md  2026-06-09-auto-approve.md  2026-06-10-robit-gui-implementation.md  2026-06-12-robit-gui-workdir-flag.md  2026-06-20-multimodal-support.md  2026-06-20-robit-qq-media-support.md  2026-07-09-p0-context-management-fix.md  2026-07-09-p1-context-compression.md  2026-07-10-directory-lock-implementation.md
docs/superpowers/specs/: 2026-06-05-write-edit-tools-design.md  2026-06-09-auto-approve-design.md  2026-06-10-robit-gui-design.md  2026-06-18-robit-chatbot-qq-design.md  2026-07-10-directory-lock-design.md  2026-07-18-memory-tools-design.md
examples/robit-agent/: Cargo.toml
examples/robit-agent/src/: main.rs
examples/robit-chat/: Cargo.toml
examples/robit-chat/src/: main.rs
