[workspace]
members = [
    "crates/robit-ai",
    "crates/robit-agent",
    "crates/robit-tui",
    "crates/robit-gui",
    "examples/robit-chat",
    "examples/robit-agent",
]
resolver = "2"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.0"

# LLM API
async-openai = { version = "0.41", features = ["chat-completion"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
thiserror = "2"
anyhow = "1"

# 工具库
dirs = "6"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
unicode-width = "0.2.2"
pulldown-cmark = "0.13"

# CLI
clap = { version = "4.5", features = ["derive"] }
