[workspace]
members = [
    "crates/robit-ai",
    "crates/robit-agent",
    "crates/robit-tui",
    "crates/robit-gui",
    "crates/robit-chatbot",
    "crates/robit-qq",
    "examples/robit-chat",
    "examples/robit-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.7"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/leexgone/robit"
homepage = "https://github.com/leexgone/robit"

[workspace.dependencies]
# 内部 crates
robit-ai = { path = "crates/robit-ai", version = "0.1.7" }
robit-agent = { path = "crates/robit-agent", version = "0.1.7" }
robit-chatbot = { path = "crates/robit-chatbot", version = "0.1.7" }

# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio-util = "0.7"
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
reqwest = { version = "0.13", features = ["json", "multipart"] }

# 编码
base64 = "0.22"
bytes = "1.0"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.1"

# LLM API
async-openai = { version = "0.41", features = ["chat-completion"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
thiserror = "2"
anyhow = "1"

# 工具库
dirs = "6"
dotenvy = "0.15"
uuid = { version = "1.23", features = ["v4"] }
globset = "0.4"
regex = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
chrono = "0.4"
rusqlite = { version = "0.40", features = ["bundled"] }
fs2 = "0.4"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
unicode-width = "0.2.2"
pulldown-cmark = "0.13"

# CLI
clap = { version = "4.5", features = ["derive"] }
