[package]
name = "robit-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
robit-ai = { path = "../robit-ai" }
async-openai.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
uuid.workspace = true
dirs.workspace = true
encoding_rs = "0.8"
