[package]
name = "robit-agent"
version = "0.1.0"
edition = "2021"
description = "Agent runtime, tool system, skill system, and frontend trait for robit."
license = "Apache-2.0"
repository = "https://github.com/leexgone/robit"
homepage = "https://github.com/leexgone/robit"
readme = "../../README.md"
keywords = ["llm", "agent", "automation", "tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
robit-ai = { version = "0.1.0", path = "../robit-ai" }
async-openai.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
uuid.workspace = true
dirs.workspace = true
encoding_rs = "0.8"
globset.workspace = true
regex.workspace = true
