[package]
name = "robit-agent"
version.workspace = true
edition.workspace = true
description = "Agent runtime, tool system, skill system, and frontend trait for robit."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["llm", "agent", "automation", "tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
robit-ai = { workspace = true }
async-openai.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
time.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
uuid.workspace = true
dirs.workspace = true
encoding_rs = "0.8"
globset.workspace = true
regex.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
base64.workspace = true
fs2.workspace = true
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"
