[package]
name = "robit-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
dotenvy.workspace = true
dirs.workspace = true
futures.workspace = true
