[package]
name = "robit-ai"
version = "0.1.0"
edition = "2021"
description = "Multi-provider LLM API and configuration layer for robit."
license = "Apache-2.0"
repository = "https://github.com/leexgone/robit"
homepage = "https://github.com/leexgone/robit"
readme = "../../README.md"
keywords = ["llm", "ai", "agent", "openai"]
categories = ["api-bindings", "config"]

[dependencies]
async-openai.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
dotenvy.workspace = true
dirs.workspace = true
futures.workspace = true
