[package]
name = "robit-ai"
version.workspace = true
edition.workspace = true
description = "Multi-provider LLM API and configuration layer for robit."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["llm", "ai", "agent", "openai"]
categories = ["api-bindings", "config"]

[dependencies]
async-openai.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
dotenvy.workspace = true
dirs.workspace = true
futures.workspace = true
