[package]
name = "robit-chatbot"
version.workspace = true
edition.workspace = true
description = "Multi-session Bot infrastructure for robit (platform-agnostic base)."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["llm", "agent", "chatbot", "bot"]
categories = ["development-tools"]

[dependencies]
robit-agent = { workspace = true }
robit-ai = { workspace = true }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
rusqlite.workspace = true
pulldown-cmark.workspace = true

thiserror.workspace = true
