[package]
name = "robit-gui"
version = "0.1.0"
edition = "2021"
publish = false
description = "Desktop GUI frontend for the robit AI automation agent."
license = "Apache-2.0"
repository = "https://github.com/leexgone/robit"
homepage = "https://github.com/leexgone/robit"
readme = "../../README.md"
keywords = ["llm", "agent", "gui", "tauri"]
categories = ["gui", "development-tools"]

[lib]
name = "robit_gui"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
robit-agent = { version = "0.1.0", path = "../robit-agent" }
robit-ai = { version = "0.1.0", path = "../robit-ai" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
rusqlite.workspace = true
tokio.workspace = true
tokio-util = "0.7"
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
anyhow.workspace = true
dirs.workspace = true
clap = { workspace = true, features = ["derive"] }
