[package]
name = "robit-gui"
version.workspace = true
edition.workspace = true
publish = false
description = "Desktop GUI frontend for the robit AI automation agent."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["llm", "agent", "gui", "tauri"]
categories = ["gui", "development-tools"]

[lib]
name = "robit_gui"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
robit-agent = { workspace = true }
robit-ai = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
rusqlite.workspace = true
# Pin transitive Tauri brotli stack to a compatible decompressor line.
brotli-decompressor = "=5.0.1"
alloc-no-stdlib = "=2.0.4"
tokio.workspace = true
tokio-util = "0.7"
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
anyhow.workspace = true
dirs.workspace = true
clap = { workspace = true, features = ["derive"] }
