[package]
name = "robit-qq"
version = "0.1.0"
edition = "2021"
description = "QQ Official Bot platform frontend for the robit agent."
license = "Apache-2.0"
repository = "https://github.com/leexgone/robit"
homepage = "https://github.com/leexgone/robit"
readme = "../../README.md"
keywords = ["llm", "agent", "qq", "bot"]
categories = ["command-line-utilities"]

[[bin]]
name = "robit-qq"
path = "src/main.rs"

[dependencies]
robit-chatbot = { version = "0.1.0", path = "../robit-chatbot" }
robit-agent = { version = "0.1.1", path = "../robit-agent" }
robit-ai = { version = "0.1.1", path = "../robit-ai" }
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
reqwest.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
toml.workspace = true
