[package]
name = "robit-qq"
version.workspace = true
edition.workspace = true
description = "QQ Official Bot platform frontend for the robit agent."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["llm", "agent", "qq", "bot"]
categories = ["command-line-utilities"]

[[bin]]
name = "robit-qq"
path = "src/main.rs"

[dependencies]
robit-chatbot = { workspace = true }
robit-agent = { workspace = true }
robit-ai = { workspace = true }
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
reqwest.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
toml.workspace = true
