[package]
name = "robit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "robit"
path = "src/main.rs"

[dependencies]
robit-agent = { path = "../robit-agent" }
robit-ai = { path = "../robit-ai" }
ratatui.workspace = true
crossterm.workspace = true
unicode-width.workspace = true
pulldown-cmark.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
dirs.workspace = true
clap.workspace = true
