[package]
name = "robit"
version = "0.1.1"
edition = "2021"
description = "Terminal UI for the robit AI automation agent."
license = "Apache-2.0"
repository = "https://github.com/leexgone/robit"
homepage = "https://github.com/leexgone/robit"
readme = "../../README.md"
keywords = ["llm", "agent", "tui", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "robit"
path = "src/main.rs"

[dependencies]
robit-agent = { version = "0.1.1", path = "../robit-agent" }
robit-ai = { version = "0.1.1", path = "../robit-ai" }
ratatui.workspace = true
crossterm.workspace = true
unicode-width.workspace = true
pulldown-cmark.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
dirs.workspace = true
clap.workspace = true
