[package]
name = "robit"
version.workspace = true
edition.workspace = true
description = "Terminal UI for the robit AI automation agent."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["llm", "agent", "tui", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "robit"
path = "src/main.rs"

[dependencies]
robit-agent = { workspace = true }
robit-ai = { workspace = true }
ratatui.workspace = true
crossterm.workspace = true
unicode-width.workspace = true
pulldown-cmark.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
dirs.workspace = true
clap.workspace = true
