[package]
name = "robit"
version = "0.1.0"
edition = "2024"
authors = ["Steven Lee <leexgone@163.com>"]
license = "Apache-2.0"
description = "An AI automation assistant for your terminal"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
rig-core = "0.17.1"
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
toml = "0.9.5"

[dev-dependencies]
tempfile = "3.20.0"
