[package]
name = "robit"
version = "0.1.0"
edition = "2024"
authors = ["Steven Lee <leexgone@163.com>"]
license = "Apache-2.0"
description = "An AI automation assistant for your terminal"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
rig-core = "0.18.2"
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
toml = "0.9.5"

[dev-dependencies]
tempfile = "3.21.0"
