[package]
name = "robit-agent-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
robit-ai = { path = "../../crates/robit-ai" }
robit-agent = { path = "../../crates/robit-agent" }
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
