[package]
name = "robit-agent-cli"
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
robit-ai = { path = "../../crates/robit-ai" }
robit-agent = { path = "../../crates/robit-agent" }
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
clap.workspace = true
