[package]
name = "robit-agent-cli"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
robit-ai = { workspace = true }
robit-agent = { workspace = true }
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
clap.workspace = true
